<resources>
    <string name="app_name">乐运动</string>
    <string name="action_settings">Settings</string>
    <string name="nav_sport">乐运动</string>
    <string name="nav_find">精选</string>
    <string name="nav_feed">动态</string>
    <string name="nav_plan">计划</string>
    <string name="item_Myfriend">我的好友</string>
    <string name="item_score">我的成绩</string>
    <string name="item_favorites">我的收藏</string>
    <string name="item_myteam">团队</string>
    <string name="group_suggest">优秀团队推荐</string>
    <string name="item_money">我的账户</string>
    <string name="str_toast_exit">再按一次退出程序</string>
    <string name="sport_run">跑步</string>
    <string name="sport_runresult">个人成绩</string>
    <string name="sport_createdpersonplan">发起活动</string>
    <string name="sport_startsport">开始运动</string>
    <string name="update_createdpersonplan">修改个人运动计划</string>
    <string name="sport_createdteamplan">创建团队运动计划</string>
    <string name="sport_editinvitecard">编辑邀请卡</string>
    <string name="send_card">发送邀请卡</string>
    <string name="event_detail">活动详情</string>
    <string name="event_apply_person">参与成员</string>
    <string name="event_manege">活动管理</string>
    <string name="event_exit">退出活动</string>
    <string name="event_enrollment">报名情况</string>
    <string name="event_sign">签到情况</string>
    <string name="event_scoremanage">榜单管理</string>
    <string name="event_cancel">取消活动</string>
    <string name="dynamic">活动动态</string>
    <string name="ranking">战绩秀</string>
    <string name="created">完成</string>
    <string name="login">登录</string>
    <string name="exit_login">是否退出登录</string>
    <string name="update_modify">立即更新</string>
    <string name="wx_black">微信返回</string>
    <string name="writemood">发布心情</string>
    <string name="mydata">个人资料</string>
    <string name="myfriends">我的好友</string>
    <string name="addfriends">添加好友</string>
    <string name="myfavicons">我的收藏</string>
    <string name="myscore">我的成绩</string>
    <string name="message">消息中心</string>
    <string name="help">帮助中心</string>
    <string name="runsetting">跑步设置</string>
    <string name="runsoundsetting">语音反馈</string>
    <string name="setting">设置</string>
    <string name="bind_number">绑定手机号</string>
    <string name="bind">账号绑定</string>
    <string name="sportstart">立即开始</string>
    <string name="editresult">运动记录</string>
    <string name="editrecord">分局记录</string>
    <string name="senmessge">活动群发消息</string>
    <string name="created_type_running">跑步</string>
    <string name="created_type_cycling">骑行</string>
    <string name="created_type_basketball">篮球</string>
    <string name="created_type_football">足球</string>
    <string name="created_type_badminton">羽毛球</string>
    <string name="created_type_tennis">网球</string>
    <string name="created_type_swimming">游泳</string>
    <string name="created_type_fitness">健身</string>
    <string name="created_type_walking">走路</string>
    <string name="created_type_climbing">爬山</string>
    <string name="created_type_pingpong">乒乓球</string>
    <string name="created_type_volleyball">排球</string>
    <string name="created_type_plank">平板支撑</string>
    <string name="created_type_billiards">桌球</string>
    <string name="created_type_bowling">保龄球</string>
    <string name="created_type_golf">高尔夫球</string>
    <string name="created_type_party">聚会</string>
    <string name="created_type_yoga">瑜伽</string>
    <string name="created_type_skating">溜冰</string>
    <string name="created_type_other">其他</string>
    <string name="created_type_custom">自定义</string>
    <string name="toast_address_isempty">请输入活动地址!</string>
    <string name="toast_address_title">请输入活动标题!</string>
    <string name="toast_address_stime">请选择开始时间</string>
    <string name="toast_address_etime">请选择结束时间</string>
    <string name="toast_login_username">请输入手机号码!</string>
    <string name="toast_photo_error">请输入正确的手机号码!</string>
    <string name="toast_login_password">请输入密码!</string>
    <string name="toast_vcode_error">请输入4位数字的短信验证码</string>
    <string name="toast_login_mood">发布内容不能为空</string>
    <string name="toast_creaded_susscec">创建成功!</string>
    <string name="toast_distance">请输入运动距离.</string>
    <string name="toast_duration">请输入运动时间.</string>
    <string name="toast_match_score">请输入完整比分</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="errcode_wx">网络连接异常，请稍后再试</string>
    <string name="register">快速注册</string>
    <string name="phonenumber">请输入手机号</string>
    <string name="toast_password">请输入位密码（6~12位字符）</string>
    <string name="vcode">请输入4位数字验证码</string>
    <string name="register_f">注册失败</string>
    <string name="getvcode">获取验证码</string>
    <string name="register_type">——————使用其它帐号一键登录——————</string>
    <string name="businesses">活动场馆</string>
    <string name="selectcity">城市定位</string>
    <string name="businesses_detail">乐运动</string>
    <string name="group_data">运动数据</string>
    <string name="posts">运动头条</string>
    <string name="accept_detail">报名情况</string>
    <string name="salemanage">战绩秀</string>
    <string name="filter">排名方式</string>
    <string name="alias">别名注册失败</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="camera">拍照</string>
    <string name="phone_album">从手机相册选择</string>
    <string name="sure">确定</string>
    <string name="password_p">密码</string>
    <string name="nickname">昵称</string>
    <string name="preview">预览</string>
    <string name="signature">个性签名</string>
    <string name="unknown">未知</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="version_info">当前已是最新版本！</string>
    <string name="find_newversion">升级提醒</string>
    <string name="commit_update">确定更新</string>
    <string name="no_update">下次再说</string>
    <string name="update_userinfo_success">修改信息成功</string>
    <string name="create_team_success">创建团队成功</string>
    <string name="create_team_failure">创建团队失败</string>
    <string name="about_aport">关于</string>
    <string name="mywallet">我的钱包</string>
    <string name="withdrawals">提现</string>
    <string name="relatedpay">设置收款账户</string>
    <string name="about_sport_info">乐运动是国内首款可发起多人运动的APP，致力于帮助爱好运动的个人及群体方便快捷地组织体育活动，轻松管理个人运动历史，与身边好友挑战跑步，向更多人分享运动经验与快乐！</string>
    <string name="about_aport_copyright">乐活灵动科技  版权所有</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_success">意见提交成功</string>
    <string name="commit">提交</string>
    <string name="forget_psw">忘记密码？</string>
    <string name="send_code">发送验证码</string>
    <string name="find_psw">找回密码</string>
    <string name="find_psw_info">请输入您注册乐运动的手机号，我们将会发送验证码到您手机上：</string>
    <string name="send_code_tipinfo">请确认将验证码短息发送到这个号码：</string>
    <string name="tip">提示</string>
    <string name="send">发送</string>
    <string name="have_sended">已发送验证码短信到</string>
    <string name="input_code">请输入短信验证码</string>
    <string name="recieve_code_time">接收短信大约需要60秒</string>
    <string name="verification">验证</string>
    <string name="reset_login">重置并登陆</string>
    <string name="newpsw">新密码</string>
    <string name="oldpsw">原密码</string>
    <string name="surepsw">确认密码</string>
    <string name="resetpsw">重置密码</string>
    <string name="psw_notempty">新密码或者确认密码不能为空</string>
    <string name="psw_notsame">两次输入密码不一致</string>
    <string name="psw_length">密码需要6~20位，请重新输入</string>
    <string name="distance">距离</string>
    <string name="speed">速度</string>
    <string name="pace">配速</string>
    <string name="calorie">卡路里</string>
    <string name="match">比分</string>
    <string name="duration">时长</string>
    <string name="toast_gps">未打开GPS服务</string>
    <string name="hvae_no_favicans">暂时没有收藏记录</string>
    <string name="hvae_no_messages">暂时没有消息记录</string>
    <string name="hvae_no_applyperson">暂时没有报名成员</string>
    <string name="hand_edit_address">手动输入地址</string>
    <string name="hand_edit_business">搜索当前所选城市的场馆</string>
    <string name="sport_challenges">隔空挑战</string>
    <string name="created_challenges">发起挑战</string>
    <string name="editteaminfo">编辑战队名称</string>
    <string name="invitefriend">选择邀请好友</string>
    <string name="person_performance">个人运动成绩</string>
    <string name="detail_challenges">挑战实况</string>
    <string name="custom_distance">自定义达标挑战</string>
    <string name="challenges_person">个人挑战</string>
    <string name="challenges_twoteam">两队较量</string>
    <string name="challenges_moreteam">多队竞赛</string>
    <string name="rule">规则</string>
    <string name="morerank">查看完整榜单</string>
    <string name="a_name">A战队名称</string>
    <string name="a_logo">A战队标志</string>
    <string name="b_name">B战队名称</string>
    <string name="b_logo">B战队标志</string>
    <string name="rule_name_10_t">10公里周赛</string>
    <string name="rule_name_20_t">20公里周赛</string>
    <string name="rule_name_custom_t">自定义跑量周赛</string>
    <string name="rule_name_person_t">个人累计跑量周赛</string>
    <string name="rule_name_team_t">团队累计跑量周赛</string>
    <string name="rule_name_person">单人比拼挑战规则</string>
    <string name="rule_name_twoteam">两队较量挑战规则</string>
    <string name="rule_name_moreteam">多队竞赛挑战规则</string>
    <string name="creare_team_info">为报名的小伙伴创建一个团队吧~</string>
    <string name="creare_team">创建团队</string>
    <string name="complete_teaminfo">编辑团队资料</string>
    <string name="challenges_noteam">赶紧去邀请团队加入挑战吧～</string>
    <string name="choosegrouptochallenges">选择要加入的团队</string>
    <string name="delgrouptochallenges">选择要移除的团队</string>
    <string name="rule_context_person">一周内个人累计跑量比拼\n\n

设置规则：\n
发起者可以设置挑战名称，也可以设置挑战周期（默认为本周，也可以选择下周），\n
系统设定的一周时间为：当周的周一至周日\n
所有人可以邀请小伙伴加入，支持app内部好友、微信、QQ、朋友圈等\n\n

统计规则：\n
    1、接受挑战后，系统自动将在有效挑战时间内使用乐运动记录的所有跑量统计在挑战结果内；\n
    2、手动记录的数据不计入挑战结果。\n\n


排名规则：\n
在有效时间内，个人累计跑量最多者获胜；\n
排名按累计跑量由多至少依次排名。\n\n</string>
    <string name="rule_context_twoteam">一周内两组队员累计跑量比拼\n\n

设置规则：\n
发起者可以设置挑战A、B战队的名称和图标，可以设置挑战名称，也可以设置挑战周期（默认为本周，也可以选择下周），\n
系统设定的一周时间为：当周的周一至周日\n
所有人可以邀请小伙伴加入，支持app内部好友、微信、QQ、朋友圈等\n\n

统计规则：\n
    1、接受挑战后，系统自动将在有效挑战时间内使用乐运动记录的所有跑量统计在挑战结果内；\n
    2、挑战手动记录的数据不计入挑战结果。\n\n


排名规则：\n
有效时间内，累计跑量多的一方获胜。\n\n</string>
    <string name="rule_context_moreteam">一周内多个团队累计跑量比拼\n\n

设置规则：\n
发起者可以设置挑战名称，也可以设置挑战周期（默认为本周，也可以选择下周），\n
系统设定的一周时间为：当周的周一至周日\n
只有发起者可以邀请团队加入，但是只能邀请app内部创建的团队\n
队长接受邀请后，全体团队成员会发消息提示已加入挑战\n\n

统计规则：\n
    1、接受挑战后，系统自动将在有效挑战时间内使用乐运动记录的所有跑量统计在挑战结果内；\n
    2、挑战手动记录的数据不计入挑战结果。\n\n


排名规则：\n
有效时间内，累计跑量多的团队获胜。\n\n</string>
    <string name="challenges_personperformance">个人运动成绩</string>
    <string name="team_select">查找团队</string>
    <string name="team_select_null">搜索关键字为空</string>
    <string name="team_detail">团队详情</string>
    <string name="team_qr">团队二维码</string>
    <string name="team_membermanager">成员管理</string>
    <string name="team_photos">团队相册</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="app_tip">提示</string>
    <string name="mylevel">我的等级</string>
    <string name="levelcoininfo">等级金币说明</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
</resources>