<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_top"
        style="@style/style_rl_top_title" >

        <ImageView
            android:id="@+id/iv_back"
            style="@style/style_iv_top_title_left"
            android:src="@drawable/iv_selector_back" />

        <TextView
            android:id="@+id/input_code_title"
            style="@style/style_tv_top_title" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:text="@string/have_sended"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:textColor="@color/black"
        android:background="@color/white"
        android:id="@+id/et_code"
        android:textCursorDrawable="@drawable/color_cursor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/input_code"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/recieve_code_time"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/verificate"
        android:background="@color/send_code_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/verification"
        android:textSize="20sp" />

</LinearLayout>