<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/rl_top"
        style="@style/style_rl_top_title" >

        <ImageView
            android:id="@+id/iv_back"
            style="@style/style_iv_top_title_left"
            android:contentDescription="@string/app_name"
            android:src="@drawable/iv_selector_back" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/style_tv_top_title"
            android:text="@string/sport_challenges" />
    </RelativeLayout>

    <View
        android:id="@+id/link"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rl_top"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/link"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/grey"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_challenges_person"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_challenges_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_challenges_person" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/challenges_person"
                android:textColor="@color/challenges_person"
                android:textSize="19dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_challenges_twoteam"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_challenges_twoteam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_challenges_moreperple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/challenges_twoteam"
                android:textColor="@color/challenges_twoteam"
                android:textSize="19dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_challenges_moreteam"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_challenges_moreteam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_challenges_moreteam" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/challenges_moreteam"
                android:textColor="@color/challenges_moreteam"
                android:textSize="19dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>