<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/rl_top"
        style="@style/style_rl_top_title" >

        <ImageView
            android:id="@+id/iv_back"
            style="@style/style_iv_top_title_left"
            android:src="@drawable/iv_selector_back" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/style_tv_top_title"
            android:text="@string/login"
            android:textColor="#aa000000" />
    </RelativeLayout>

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/rl_top"
        android:background="#f5f5f5" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_divider"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/wane_shape_input_box"
        android:hint="@string/phonenumber"
        android:inputType="phone"
        android:maxLength="11"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#979797"
        android:textCursorDrawable="@drawable/color_cursor" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/wane_shape_input_box"
        android:hint="@string/password_p"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#979797"
        android:textCursorDrawable="@drawable/color_cursor" />

    <TextView
        android:id="@+id/forget_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/password"
        android:layout_marginBottom="17dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="17dp"
        android:text="@string/forget_psw"
        android:textSize="16sp"
        android:textColor="#49b0f5" />

    <TextView
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/forget_psw"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:background="@drawable/wane_shape_rectangle_red"
        android:gravity="center"
        android:text="登录"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <include layout="@layout/layout_login" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLargeInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:visibility="gone" />

</RelativeLayout>