<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_top"
        style="@style/style_rl_top_title" >

        <ImageView
            android:id="@+id/iv_back"
            style="@style/style_iv_top_title_left"
            android:src="@drawable/iv_selector_back" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/style_tv_top_title"
            android:text="@string/about_aport" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:lineSpacingExtra="10dp"
            android:text="@string/about_sport_info"
            android:textColor="@color/about_sport"
            android:textSize="13sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/about_sport_version_name"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/version_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/about_aport_copyright"
            android:textColor="@color/about_sport_version_name"
            android:textSize="13sp" />
    </RelativeLayout>

</LinearLayout>